--- a/shop.html
+++ b/shop.html
@@ -129,6 +129,149 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         </div>
       </div>
     </div>
+        <!-- Item 4 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/aPBw9Bl.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Stryder</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>
+        <!-- Item 5 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/ovekEwm.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Chimera</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>
+        <!-- Item 6 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/AuM201l.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Comet</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>
+         <!-- Item 7 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/qonEpJm.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Gburrito</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>
+        <!-- Item 8 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/w8KEmMt.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Mule</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>
+         <!-- Item 9 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/mfRRRAp.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Sanchez</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div> 
+              <!-- Item 10 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/A3gJZtd.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Sanctus</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>  
+                    <!-- Item 11 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/S4BBsD5.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Weevil</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>
+                    <!-- Item 12 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/DHzEFbh.png" alt="Item 3">
+        <div class="card-body">
+          <h5>GT</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>  
+                    <!-- Item 13 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/uztvTRq.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Chimera</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>  
+                    <!-- Item 14 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/vFjmLbw.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Dominator</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>  
+                    <!-- Item 15 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/woeZHEk.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Faggio</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>  
+                    <!-- Item 16 -->
+    <div class="col-sm-4 d-flex justify-content-center">
+      <div class="card card-item">
+        <img src="https://imgur.com/HjNYBdL.png" alt="Item 3">
+        <div class="card-body">
+          <h5>Sabre GT</h5>
+          <p>Valor: R$ 300,00</p>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
+        </div>
+      </div>
+    </div>  
 
   </div>
 
@@ -150,3 +293,4 @@ document.getElementById('year').textContent = new Date().getFullYear();
 
 </body>
 </html>
+
