--- a/shop.html
+++ b/shop.html
@@ -43,6 +43,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 .discord-btn:hover { background:linear-gradient(135deg,#5b6ea1,#7f88d0); transform:translateY(-2px); }
 
 .card-item {
+    position: relative; /* necessário para overlay */
     border-radius: 12px; overflow: hidden; margin-bottom: 20px;
     transition:0.3s; box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     width: 250px;
@@ -54,6 +55,15 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
     height: 180px;
     object-fit: cover;
     border-bottom: 1px solid #ddd; 
+    pointer-events: none; /* impede clique direto */
+    user-select: none; /* impede seleção */
+}
+
+.card-item::after {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; width: 100%; height: 100%;
+    z-index: 2;
 }
 
 .card-body { padding: 15px; text-align: center; }
@@ -89,16 +99,14 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   <h2 class="mb-4 text-center">Loja Exclusiva da Mecânica</h2>
   <div class="row justify-content-center g-4">
 
-    <!-- Todos os 16 itens -->
+    <!-- Lista completa de produtos com todas as imagens -->
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <img src="https://imgur.com/je5gY9B.png" alt="Mercedes 63">
         <div class="card-body">
           <h5>Mercedes 63</h5>
           <p>Valor: R$ 100,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -109,9 +117,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Skyline R34</h5>
           <p>Valor: R$ 200,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -122,9 +128,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Moto Yamaha R1</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -135,9 +139,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Stryder</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -148,9 +150,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Chimera</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -161,9 +161,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Comet</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -174,9 +172,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Gburrito</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -187,9 +183,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Mule</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -200,9 +194,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Sanchez</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -213,9 +205,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Sanctus</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -226,9 +216,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Weevil</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -239,9 +227,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>GT</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -252,9 +238,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Chimera</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -265,9 +249,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Dominator</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -278,9 +260,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Faggio</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
@@ -291,9 +271,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <div class="card-body">
           <h5>Sabre GT</h5>
           <p>Valor: R$ 300,00</p>
-          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
-            <i class="fa-brands fa-discord"></i> Comprar
-          </a>
+          <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a>
         </div>
       </div>
     </div>
